# paper-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: EXPERIMENT_RESULTS.md  PRODUCT_SPEC.md
examples/: hyper_protosurv_mock_experiments.md  tcga_results_template.md  tcga_training_summary.csv
src/paper_agent/: __init__.py  api.py  cli.py  config.py  experiment_artifact_consistency.py  experiment_contract.py  experiment_evidence.py  experiment_provenance.py  experiment_quality.py  export.py  figures.py  llm.py  state.py  tables.py  tcga_artifacts.py  workflow.py
src/paper_agent/agents/: baseline_reader.py  bibliography.py  code_baseline_comparison.py  code_understanding.py  draft_report.py  evidence_guard.py  experiment_analyzer.py  innovation_analyzer.py  latex_composer.py  llm_self_review.py  paper_planner.py  presentation_planner.py  reference_resolver.py  related_work_discovery.py  reviewer.py  section_writer.py  submission_package_validator.py  submission_readiness.py  venue_template.py
src/paper_agent/latex_templates/generic/: main.tex.j2
src/paper_agent/latex_templates/ieee/: main.tex.j2
src/paper_agent/latex_templates/ieee_journal/: main.tex.j2
tests/: test_llm_client.py  test_tcga_artifacts.py  test_workflow.py
