[project]
name = "paper-agent"
version = "0.1.0"
description = "Research paper writing agent for CS graduate workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "pymupdf>=1.24.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
paper-agent = "paper_agent.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_agent = ["latex_templates/**/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

